# mentor-mingle

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  config.toml  docker-compose.yaml  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
mentor_mingle/: __init__.py  config.py  llm_handler.py  utils.py
mentor_mingle/helpers/: cache.py
mentor_mingle/llm_handler/: index.html
mentor_mingle/persona/: base.py  mentor.py  prompts.py
mentor_mingle/tot/: bfs_search.py
persona/personification/: index.html
site/: 404.html  index.html
site/mentor_mingle/llm_handler/: index.html
site/persona/personification/: index.html
site/tot/config/: index.html
site/tot/process/: index.html
src/: main.py
src/mentor_mingle/: llm_handler.py
src/mentor_mingle/persona/: base.py
src/mentor_mingle/tot/: schema.py
tests/: conftest.py  test_llm_handler.py
tests/helpers/: test_cache.py
tests/tot/: test_schema.py
tests/tot/.pytest_cache/v/cache/: lastfailed  nodeids
tot/config/: index.html
tot/process/: index.html
